k8s/api/2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: canister
  labels:
    app: com.tale.canister.api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: com.tale.canister.api
  template:
    metadata:
      labels:
        app: com.tale.canister.api
    spec:
      containers:
        - name: api
          image: ghcr.io/cnstr/api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /v2/healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /v2/healthz
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
