k8s/api/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: canister
  labels:
    app: com.tale.canister.api
spec:
  selector:
    app: com.tale.canister.api
  ports:
    - name: http
      port: 3000
      targetPort: 3000
