k8s/api/6-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api
  namespace: canister
spec:
  parentRefs:
    - name: canister-gw
      namespace: envoy-gateway-system
      sectionName: https-canister
  hostnames:
    - api.canister.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v2
      backendRefs:
        - name: api
          port: 3000
